--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "hacker-news-react-redesign",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://diarmuidbeirne.github.io/hacker-news-react-redesign",
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "styled-components": "^4.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
